--- a/summary/css/styles.css
+++ b/summary/css/styles.css
@@ -167,18 +167,24 @@ h1 {
     .container {
         padding: 10px;
     }
-    
+
     .card {
         margin-bottom: 15px;
     }
-    
+
     .btn-group {
         display: flex;
         flex-direction: column;
         gap: 10px;
     }
-    
+
     .btn-group .btn {
         margin: 5px 0;
     }
-} 
+}
+
+.highlight {
+    color: #f56e80;
+    font-weight: bold;
+    text-shadow: 0 0px 3px rgba(234, 150, 150, 0.55);
+}
